Add support for argon2id challenge
